--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,18 @@
+# IDE files
 .vscode
 
+# Generated output files
 saida
 saida.cpp
+
+# Flex/Bison generated files
+lex.yy.c
+pcdpp.tab.c
+pcdpp.tab.h
+
+# Executables
+pcdpp
+programa_final
+
+# Object files
+*.o
